gitops_apps/hello-world-bg/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blue-green-bg
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
