gitops_apps/hello-world-bg/base/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-blue
  annotations: {}
spec:
  selector:
    matchLabels:
      app: hello-world-blue
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-world-blue
    spec:
      containers:
        - name: container
#          image: 'quay.io/hemanth22/fastapiwebhook-blue:latest'
          image: quay.io/redhattraining/do480-hello-app:v1.0
          ports:
            - containerPort: 8080
              protocol: TCP
          env: []
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  paused: false
