gitops_apps/hello-world-bg/base/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-blue
spec:
  selector:
    app: hello-world-blue
  ports:
    - protocol: TCP
      # port: 8000
      # targetPort: 8000
      targetPort: 8080
