gitops_apps/hello-world-bg/base/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-green
spec:
  selector:
    app: hello-world-green
  ports:
    - protocol: TCP
      # port: 8000
      # targetPort: 8000
      targetPort: 8080
